--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="already_have_an_account">Already have an account</string>
     <string name="create_an_account">Create an Account</string>
     <string name="login">Login</string>
+    <string name="spinner">spinner</string>
 </resources>
